package com.demirsoft.grpc.Inventory;

service GrpcInventoryService {
    rpc drop(GrpcInventoryRequest) returns (GrpcInventoryResponse) {}
    rpc rollback(GrpcInventoryRequest) returns (GrpcInventoryResponse) {}
  }
  
  message GrpcInventoryRequest {
    required int32 orderId = 1;
    required int32 userId = 2;
    required int32 productId = 3;
    required int32 productCount = 4;
  }
  
  enum GrpcInventoryStatus {
    AVAILABLE = 1;
    UNAVAILABLE = 2;
  }

  message GrpcInventoryResponse{
    required int32 orderId = 1;
    required int32 userId = 2;
    required int32 productId = 3;
    required int32 productCount = 4;
    required GrpcInventoryStatus inventoryStatus = 5;
  }

  